Check if CSV profile has been removed in UI before its deletion

BUG: 362139
REVIEW: 127722